# PKDGRAV3

./: .astylerc  .gitignore  .gitmodules  .hgeol  .hgignore  .hgtags  .readthedocs.yaml  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  Dockerfile.build  Dockerfile.mpich  Dockerfile.test  EUCLID_cosmo.c  FindGRACKLE.cmake  Makefile  Makefile.am  README  README.cscs  README.docker  README.hydro  README.md  README.rst  README.ubuntu  README.windows  SPHOptions.c  SPHOptions.cxx  SPHOptions.h  TraversePST.cxx  TraversePST.h  analysis.c  assignmass.cxx  autogen.sh  avx_mathfun.h  aweights.hpp  basetype.h  beautify  bispectrum.cxx  bitbucket-pipelines.yml  (+185 more)
SPH/: SPHEOS.cxx  SPHEOS.h  SPHOptions.cxx  SPHOptions.h  SPHpredict.cxx  SPHpredict.h
analysis/: analysis.cxx  assignmass.cxx  contrast.cxx  interlace.cxx  measurepk.cxx  rsextract.cxx  rsextract.h  rshalocount.cxx  rshalocount.h  rshaloloadids.cxx  rshaloloadids.h  rsloadids.cxx  rsloadids.h  rsreorder.cxx  rsreorder.h  rssaveids.cxx  rssaveids.h
blackhole/: drift.c  drift.h  evolve.c  evolve.cxx  evolve.h  init.c  init.cxx  init.h  merger.c  merger.cxx  merger.h  seed.c  seed.cxx  seed.h  step.cxx  step.h
blitz/: CMakeLists.txt
blitz/blitz/: bzconfig.h  tm2fastiter.h  tv2fastiter.h
blitz/blitz/array/: Makefile  Makefile.in  fastiter.h  iter.h
cooling/: cooling.c  cooling.cxx  cooling.h  cooling_rates.h  cooling_struct.h  cooling_tables.c  cooling_tables.cxx  cooling_tables.h  entropy_floor.h  interpolate.h  swift_mem.h
cooling_grackle/: cooling_grackle.c  cooling_grackle.cxx  cooling_grackle.h
core/: aweights.hpp  bound.h  calcroot.cxx  calcroot.h  countspecies.cxx  countspecies.h  datafields.h  datastore.h  element.h  fftsizes.cxx  fftsizes.h  gridinfo.cxx  healpix.c  hostname.cxx  hostname.h  ignoresigbus.cxx  ignoresigbus.h  illinois.c  illinois.h  initcosmology.cxx  initcosmology.h  integerize.h  memory.cxx  memory.h  particle.cxx  particle.h  remote.h  removedeleted.cxx  removedeleted.h  select.cxx  select.h  setadd.cxx  setadd.h  simd.h  splitstore.h  swapall.cxx  swapall.h  treenode.h  vmath.h  vqsort.h
cuda/: CMakeLists.txt  check.h  cudaSPHOptions.cu  cudaewald.cu  cudaewald.h  cudapppc.cu  cudapppc.h  cudautil.cu  cudautil.cu.orig  cudautil.h  reduce.h
docs/: analysis.rst  changes.rst  conf.py  extensions.rst  index.rst  install.rst  parameters.rst  quickstart.rst  references.bib  requirements.txt  resources.rst  units.rst
docs/_ext/: make_parameters.py
domains/: calcbound.cxx  calcbound.h  combinebound.cxx  combinebound.h  distribroot.cxx  distribroot.h  distribtoptree.cxx  distribtoptree.h  dumptrees.cxx  dumptrees.h  enforceperiodic.cxx  enforceperiodic.h  freestore.cxx  freestore.h  getordsplits.cxx  getordsplits.h  olddd.cxx  olddd.h  reorder.cxx  reorder.h  tree.cxx
eEOS/: eEOS.c  eEOS.cxx  eEOS.h  eEOS_struct.h
examples/: bispectrum.py  bispectum.py  cosmology.par  measurepk.py
fmt/: CMakeLists.txt
gpu/: dencorrdata.h  dendata.h  hostdata.h  pppcdata.h  sphforcedata.h  workunit.h
gravity/: activerung.cxx  activerung.h  cl.c  cl.cxx  cl.h  countrungs.cxx  countrungs.h  ewald.cxx  ewald.h  grav.h  grav2.cxx  grav2.cxx.orig  ilc.cxx  ilc.h  ilp.cxx  ilp.h  lst.cxx  lst.h  moments.c  moments.h  opening.cxx  opening.h  pc.cxx  pc.h  pmforces.cxx  pp.cxx  pp.h  qeval.h  setsoft.cxx  setsoft.h  updaterung.cxx  updaterung.h  vmoments.cxx  vmoments.h  walk.h  walk2.cxx  zeronewrung.cxx  zeronewrung.h
group/: fof.cxx  fof.h  group.cxx  group.h  groupstats.cxx  groupstats.h  hop.cxx  hop.h
hydro/: density.c  density.cxx  flux.c  flux.cxx  gradient.c  gradient.cxx  hydro.c  hydro.cxx  hydro.h  limiters.h  riemann.h  riemann_own.h  step.c  step.cxx
ic/: RngStream.c  RngStream.h  ic.cxx  ic.h  whitenoise.cxx  whitenoise.hpp
io/: fio.c  fio.h  iochunk.cxx  iochunk.h  iomodule.c  iomodule.cxx  iomodule.h  output.cxx  output.h  outtype.c  outtype.cxx  outtype.h  restore.cxx  restore.h  service.cxx  service.h
m4/: fc_module_wrappers.m4
mdl2/: .hgeol  .hgtags  CMakeLists.txt  FindFFTW.cmake  cycle.h  mdl.f90  mdl_config.h.in  mdlbase.c  mdlbase.cxx  mdlbase.h  mdlbt.cxx  mdlbt.h
mdl2/cuda/: CMakeLists.txt  mdlcuda.cu  mdlcuda.h
mdl2/gpu/: mdlgpu.cxx  mdlgpu.h
mdl2/mac/: pthread_barrier.c  pthread_barrier.h
mdl2/metal/: CMakeLists.txt  Metal.hpp  mdlmetal.h  mdlmetal.mm
mdl2/mpi/: arc.cxx  arc.h  basicmessage.h  mdl.c  mdl.cxx  mdl.h  mdlfft.h  mdlmessages.cxx  mdlmessages.h  mpimessages.cxx  mpimessages.h  rwlock.h
mdl2/null/: mdl.c  mdl.h
mdl2/openpa/: CMakeLists.txt  opa_config.h.in  opa_queue.h
mdl2/openpa/primitives/: opa_gcc_ppc.h
mdl2/pthread/: mdl.c  mdl.h
mdl2/sisci/: mdl.c  mdl.h
mdl2/windows/: pthread.c  pthread.h
meshless/blackhole/: accretion.cxx  accretion.h  drift.cxx  drift.h  init.cxx  init.h  seed.cxx  step.cxx  step.h
meshless/cooling/: cooling.cxx  cooling_rates.h  cooling_struct.h  cooling_tables.cxx  cooling_tables.h  interpolate.h
meshless/cooling_grackle/: cooling_grackle.cxx
meshless/hydro/: flux.cxx  (+6 more)
metal/: CMakeLists.txt  make_header.py  metal.h  metal.mm  pppc.h  pppc.metal
modules/: PKDGRAV.pxd  PKDGRAV.py  accuracy.py  accuracy.pyx  checkpoint.pyx  cosmo.pxd  cosmology.pxd  cosmology.py  cosmology.pyx  ephemeral.pxd  ephemeral.pyx
pkdgrav3-build/: Dockerfile
potential/: hernquist.h  nfw.h  potential.h
smooth/: listcomp.c  listcomp.h  smooth.c  smooth.cxx  smooth.h  smoothfcn.c  smoothfcn.cxx  smoothfcn.h
starformation/: feedback.c  feedback.cxx  feedback.h  init.c  init.cxx  init.h  starformation.c  starformation.cxx  starformation.h
stellarevolution/: stellarevolution.c  stellarevolution.cxx  stellarevolution.h
tests/: CMakeLists.txt  NewSPH.py  cache.cxx  cosmology.py  eEOS.cxx  foftest.py  gravity.py  hydro.cxx  imf.cxx  limiters.cxx  select.py  swaplocal.cxx
tools/: calculate_units.py  fof.py  hpb2fits.py  measurepk.py  readtipsy.py  show_checkpoint.py
utility/: hpb2fits.c  lcp2tip.c  psout.c  tdiff.c  tostd.c
windows/: config.h  opa_config.h  pkdgrav2.sln  pkdgrav3.sln  pkdgrav3_cl.sln  pthread.c  pthread.h
(+16 files in other folders)
